add collection_path and reanam all routes
