# app/Http/Controllers/Search/SearchController.php
@@ -11,7 +11,8 @@ class SearchController extends Controller
     public function index(Request $request){
         if($request->q != ''){
         $collections = Collection::where('collection_name', 'like',"%$request->q%")
-                                    ->orWhere('collection_description','like',"%$request->q%")->paginate(15);
+                                    ->orWhere('collection_description','like',"%$request->q%")
+                                    ->orWhere('collection_path','like',"%$request->q%")->paginate(15);
         //where('tag')
         }else{
         $collections = Collection::where('collection_name',"$request->q")->paginate(15);
