# storage/api-docs/api-docs.json
@@ -15,7 +15,7 @@
         }
     ],
     "paths": {
-        "/{collection_name}/card": {
+        "/{collection_path}/card": {
             "get": {
                 "tags": [
                     "Cards"
@@ -25,7 +25,7 @@
                 "operationId": "getCardsList",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -67,7 +67,7 @@
                 "operationId": "Store a newly created card",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -104,7 +104,7 @@
                 ]
             }
         },
-        "/{collection_name}/card/{card}": {
+        "/{collection_path}/card/{card}": {
             "get": {
                 "tags": [
                     "Cards"
@@ -114,7 +114,7 @@
                 "operationId": "getCardById",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -165,7 +165,7 @@
                 "operationId": "Delete card",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -209,7 +209,7 @@
                 "operationId": "Update card",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -319,7 +319,7 @@
                 ]
             }
         },
-        "/collection/{collection_name}": {
+        "/collection/{collection_path}": {
             "get": {
                 "tags": [
                     "Collection"
@@ -329,7 +329,7 @@
                 "operationId": "getCollectionByName",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -371,7 +371,7 @@
                 "operationId": "Delete collection",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
@@ -406,7 +406,7 @@
                 "operationId": "Update collection",
                 "parameters": [
                     {
-                        "name": "collection_name",
+                        "name": "collection_path",
                         "in": "path",
                         "description": "Colelction name",
                         "required": true,
